[package]
name = "github_crawler"
version = "0.1.0"
authors = ["zhaogang92 <zhaogang92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# octocrab = { version = "0.8", git = "https://github.com/zhaogang92/octocrab.git" }
octocrab = { version = "0.8", path = "../octocrab" }
tokio = { version = "1", features = ["full"] }


[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`